--- a/translations/translation_ru.xml
+++ b/translations/translation_ru.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8" standalone="no" ?>
 <l10n>
     <contributors>
-        <name>BARS-7887, nagor</name>
+        <name>BARS-7887</name>
+        <name>nagor</name>
     </contributors>
 
     <!-- Translation Notes!
