--- a/translations/translation_cs.xml
+++ b/translations/translation_cs.xml
@@ -19,10 +19,6 @@
         Console Command: gtxReloadEasyDevControlsTranslations
     -->
 
-    <!-- This translation is currently not included in any packaged release of the mod via ModHub or GitHub due to a large number of invalid characters that are unknown by the Giants Engine.
-         If this can be corrected by a Chinese / English speaking person I am happy to include it in a release :-)
-    -->
-
     <texts>
         <!-- Inputs -->
         <text name="input_EDC_SHOW_UI" text="打开菜单"/>
@@ -34,10 +30,6 @@
         <text name="easyDevControls_loadError" text="无法加载或不支持由%s创建的Mod%s！
 为了避免错误，应该删除此mod！
 访问下面的Giants modHub下载链接以获取最新的官方版本."/>
-
-        <!-- First Load Info -->
-        <text name="easyDevControls_firstLoadInfo" text="不知道怎么做某件事？
-查看 Easy Development Controls 菜单的帮助部分。"/>
 
         <!-- Misc -->
         <text name="easyDevControls_typePlaceables" text="可放置的"/>
@@ -112,8 +104,8 @@
         <text name="easyDevControls_infohud_tree" text="木"/>
         <text name="easyDevControls_all" text="全部"/>
         <text name="easyDevControls_found" text="创建"/>
-        <text name="easyDevControls_state" text="状态%s"/>
-        <text name="easyDevControls_type" text="类型%s"/>
+        <text name="easyDevControls_state" text="状态%d"/>
+        <text name="easyDevControls_type" text="类型%d"/>
         <text name="easyDevControls_fill" text="填满"/>
         <text name="easyDevControls_empty" text="空"/>
         <text name="easyDevControls_maximum" text="最多"/>
@@ -156,7 +148,7 @@
         <text name="easyDevControls_reloadFailedMessage" text="The following %s failed to reload."/>
         <text name="easyDevControls_ignoreRemoveIfEmptyMessage" text="Fill level of '%s' set to 0, would you like to ignore delete on empty flag?"/>
         <text name="easyDevControls_serverRequestMessage" text="Requesting update from server, please wait."/>
-        <text name="easyDevControls_defaultResetFailedMessage" text="Failed to reset to default!"/>
+        <text name="easyDevControls_defaultResetFailed" text="Failed to reset to default!"/>
         <text name="easyDevControls_unknownFailMessage" text="Failed, unknown reason!"/>
         <text name="easyDevControls_noInformationMessage" text="No information available"/>
 
@@ -213,7 +205,6 @@ Make sure vehicle is positioned on a flat plane that is parallel to x/z plane fo
         <text name="easyDevControls_stopTimeTitle" text="时间停止"/>
         <text name="easyDevControls_showCollectablesTitle" text="显示收藏品"/>
         <text name="easyDevControls_clearI3DCacheTitle" text="清除I3D缓存"/>
-        <text name="easyDevControls_reloadStoreItemsTitle" text="重新加载商店物品"/>
 
         <!-- General Frame Info -->
         <text name="easyDevControls_addMoneyInfo" text="Added %s to farm account."/>
@@ -226,9 +217,9 @@ Make sure vehicle is positioned on a flat plane that is parallel to x/z plane fo
         <text name="easyDevControls_hudInputOffInfo" text="Hud input binding off"/>
         <text name="easyDevControls_hudInputOnInfo" text="Hud input binding on  (Toggle the hud visibility using input '%s')"/>
         <text name="easyDevControls_teleportPlayerFieldInfo" text="Moved player to Field %s successfully."/>
-        <text name="easyDevControls_teleportVehiclesFieldInfo" text="Moved %s vehicles to Field %s successfully."/>
+        <text name="easyDevControls_teleportVehiclesFieldInfo" text="Moved %d vehicles to Field %s successfully."/>
         <text name="easyDevControls_teleportPlayerInfo" text="Moved player to coordinates %s, %s successfully."/>
-        <text name="easyDevControls_teleportVehiclesInfo" text="Moved %s vehicles to coordinates %s, %s successfully."/>
+        <text name="easyDevControls_teleportVehiclesInfo" text="Moved %d vehicles to coordinates %s, %s successfully."/>
         <text name="easyDevControls_flipVehiclesInfo" text="Attempting to correct vehicle orientation and the orientation of any connected implement."/>
         <text name="easyDevControls_deleteObjectsKeyInfo" text="Delete objects key (%s) %s"/>
         <text name="easyDevControls_setFovAngleInfo" text="Camera FOV updated to %d°."/>
@@ -237,7 +228,6 @@ Make sure vehicle is positioned on a flat plane that is parallel to x/z plane fo
         <text name="easyDevControls_extraTimescalesInfo" text="Extra timescales %s"/>
         <text name="easyDevControls_stopTimeInfo" text="Timescale has been set to zero."/>
         <text name="easyDevControls_clearI3DCacheInfo" text="Deleted all shared i3d files."/>
-        <text name="easyDevControls_reloadStoreItemsInfo" text="Successfully reloaded %s store items."/>
 
         <!-- General Frame Help -->
         <text name="easyDevControls_addMoneyHelp" text="Adds money to your farm account balance."/>
@@ -258,7 +248,6 @@ Note: Feature is only available to the 'Master Users / Admin'!"/>
         <text name="easyDevControls_stopTimeHelp" text="Sets the current timescale to zero."/>
         <text name="easyDevControls_showCollectablesHelp" text="Adjusts at what percentage the collectables will be displayed on the map. Note: Currently for 'Single Player' use only."/>
         <text name="easyDevControls_clearI3DCacheHelp" text="Removes all cached i3d files to ensure the latest versions are loaded from disk. When there is no shared i3d files available this function will be disabled."/>
-        <text name="easyDevControls_reloadStoreItemsHelp" text="Reloads all store items data including store configuration options."/>
 
         <!-- Player Frame XML -->
         <text name="easyDevControls_playerHeader" text="玩家"/>
@@ -327,7 +316,7 @@ Note: This mode is designed for screenshots and not all game functions such as '
 
         <!-- Objects Frame Info -->
         <text name="easyDevControls_spawnObjectsInfo" text="Adding %s."/>
-        <text name="easyDevControls_removeAllObjectsInfo" text="Successfully removed %s %s from the map."/>
+        <text name="easyDevControls_removeAllObjectsInfo" text="Successfully removed %d %s from the map."/>
         <text name="easyDevControls_tipToGroundInfo" text="Successfully tipped %s of %s at a length of %s."/>
         <text name="easyDevControls_clearTipAreaRadiusInfo" text="Successfully cleared %s height type at a radius of %s."/>
         <text name="easyDevControls_clearTipAreaFieldInfo" text="Successfully cleared %s of %s height type."/>
@@ -385,7 +374,7 @@ Red: Bit Vectors &gt; 1"/> <!-- Translators: Space is intentional for easy readi
         <text name="easyDevControls_resetToDefault" text="重置为默认"/>
         <text name="easyDevControls_toggleCoverTitle" text="切换盖"/>
         <text name="easyDevControls_fillUnitFillLevelTitle" text="填充液态"/>
-        <text name="easyDevControls_fillUnitIndex" text="填充装置%s"/>
+        <text name="easyDevControls_fillUnitIndex" text="填充装置%d"/>
 
         <!-- Vehicle Frame Info -->
         <text name="easyDevControls_vehicleConditionInfo" text="The condition of %s has been update."/>
@@ -399,9 +388,9 @@ Red: Bit Vectors &gt; 1"/> <!-- Translators: Space is intentional for easy readi
         <text name="easyDevControls_tensionBeltsDebugInfo" text="Tension Belts debugging is now %s"/>
         <text name="easyDevControls_vehicleDistanceInfo" text="Vehicle distance debugging is now %s"/>
         <text name="easyDevControls_setPowerConsumerInfo" text="%s power consumer data has been updated (Synced to all vehicles: %s)."/>
-        <text name="easyDevControls_toggleCoverInfo" text="%s cover is now %s, state id %s."/>
-        <text name="easyDevControls_setFillUnitFillLevelInfo" text="Successfully set fill unit %s of %s to %s with a fill level of %s."/>
-        <text name="easyDevControls_setFillUnitEmptyInfo" text="Successfully emptied fill unit %s of %s."/>
+        <text name="easyDevControls_toggleCoverInfo" text="%s cover is now %s, state id %d."/>
+        <text name="easyDevControls_setFillUnitFillLevelInfo" text="Successfully set fill unit %d of %s to %s with a fill level of %s."/>
+        <text name="easyDevControls_setFillUnitEmptyInfo" text="Successfully emptied fill unit %d of %s."/>
 
         <!-- Vehicles Frame Help -->
         <text name="easyDevControls_vehicleConditionHelp" text="Adds, removes or sets the selected condition percentage to an 'entered vehicle and all implements' or a 'single vehicle' in range of the player."/>
@@ -446,13 +435,13 @@ States 1 to 10: Vehicle specific states for testing."/> <!-- Translators: Space 
         <text name="easyDevControls_reloadAllPlaceablesTitle" text="重新加载可放置项"/>
 
         <!-- Placeable Frame Info -->
-        <text name="easyDevControls_productionPointOwnerInfo" text="Changed %s %s to farm %s (%s) successfully."/>
-        <text name="easyDevControls_productionPointStateInfo" text="Changed %s %s to '%s' state successfully."/>
-        <text name="easyDevControls_productionPointDistributionInfo" text="Changed %s %s to distribution mode '%s' successfully."/>
+        <text name="easyDevControls_productionPointOwnerInfo" text="Changed %d %s to farm %s (%d) successfully."/>
+        <text name="easyDevControls_productionPointStateInfo" text="Changed %d %s to '%s' state successfully."/>
+        <text name="easyDevControls_productionPointDistributionInfo" text="Changed %d %s to distribution mode '%s' successfully."/>
         <text name="easyDevControls_productionPointFillLevelInfo" text="Changed %s fill levels of '%s' on production point %s successfully."/>
-        <text name="easyDevControls_productionPointFillLevelAllInfo" text="Changed all %s fill levels on %s %s successfully."/>
+        <text name="easyDevControls_productionPointFillLevelAllInfo" text="Changed all %s fill levels on %d %s successfully."/>
         <text name="easyDevControls_productionPointDistributingInfo" text="Distributing '%s' to the following production points:"/>
-        <text name="easyDevControls_reloadPlaceablesInfo" text="Successfully reloaded XML and I3D of %s %s."/>
+        <text name="easyDevControls_reloadPlaceablesInfo" text="Successfully reloaded XML and I3D of %d %s."/>
 
         <!-- Placeables Frame Help -->
         <text name="easyDevControls_productionPointHelp" text="Allows the following changes to be made to the production points.
@@ -518,24 +507,24 @@ Fill Level:
         <text name="easyDevControls_stoneSystemDebugTitle" text="调试Fieldstones"/>
 
         <!-- Fields Frame Info -->
-        <text name="easyDevControls_setAllFieldSuccessInfo" text="Updated %s fields successfully"/>
-        <text name="easyDevControls_setFieldSuccessInfo" text="Updated field %s successfully"/>
+        <text name="easyDevControls_setAllFieldSuccessInfo" text="Updated %d fields successfully"/>
+        <text name="easyDevControls_setFieldSuccessInfo" text="Updated field %d successfully"/>
         <text name="easyDevControls_setFieldFailedInfo" text="Updating of fields failed."/>
 
         <text name="easyDevControls_advanceGrowthInfo" text="Growth on all fields has been advanced to the next stage."/>
         <text name="easyDevControls_advanceGrowthWarning" text="Advancing growth stage is only available when the game setting '%s' is set to 'No'.
 
 Would you like to change your current setting from '%s' to 'No' so this action can be performed?"/> <!-- Translators: Space is intentional for easy reading -->
-        <text name="easyDevControls_setGrowthPeriodInfo" text="Growth period on all fields updated to %s (%s)."/>
+        <text name="easyDevControls_setGrowthPeriodInfo" text="Growth period on all fields updated to %s (%d)."/>
         <text name="easyDevControls_setGrowthPeriodWarning" text="Setting growth period is not available when the game setting '%s' is set to '%s'.
 
 Would you like to change your setting to 'No' so this action can be performed?"/> <!-- Translators: Space is intentional for easy reading -->
-        <text name="easyDevControls_addWeedOrStoneDelta" text="Increased %s delta by %s."/>
-        <text name="easyDevControls_removeWeedOrStoneDelta" text="Decreased %s delta by %s."/>
-        <text name="easyDevControls_vineSetStateInfo" text="Updated %s %s vines to growth state %s"/>
+        <text name="easyDevControls_addWeedOrStoneDelta" text="Increased %s delta by %d."/>
+        <text name="easyDevControls_removeWeedOrStoneDelta" text="Decreased %s delta by %d."/>
+        <text name="easyDevControls_vineSetStateInfo" text="Updated %d %s vines to growth state %d"/>
         <text name="easyDevControls_vineUpdateVisualsInfo" text="Updated all vine visuals"/>
-        <text name="easyDevControls_setFarmlandOwnerAllInfo" text="Updated ownership of %s available farmlands to %s farm."/>
-        <text name="easyDevControls_setFarmlandOwnerInfo" text="Updated ownership of farmland %s to farm %s."/>
+        <text name="easyDevControls_setFarmlandOwnerAllInfo" text="Updated ownership of %d available farmlands to %s farm."/>
+        <text name="easyDevControls_setFarmlandOwnerInfo" text="Updated ownership of farmland %d to farm %s."/>
         <text name="easyDevControls_refreshFieldOverlayInfo" text="Refreshing PDA field overlay and setting timer to 60 seconds."/>
         <text name="easyDevControls_debugFieldStatusInfo" text="Field status debugging %s."/>
         <text name="easyDevControls_vineSystemDebugInfo" text="Vine system debugging %s."/>
